--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.Pigalev_practical1"
         tools:targetApi="31">
         <activity
+            android:name=".SingleEntryChange"
+            android:exported="false" />
+        <activity
             android:name=".ChangingData"
             android:exported="false" />
         <activity
